--- a/app/src/main/res/layout/fragment_tracks_favoritos.xml
+++ b/app/src/main/res/layout/fragment_tracks_favoritos.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
+       android:textAlignment="center"
         android:textSize="30dp"
         android:textColor="#C8F1EBEB"
         android:text="Canciones">
