--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,34 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loginActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
-    android:id="@+id/loginActivity">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/activityLoginImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
-        android:src="@drawable/jaxoologin"/>
+        android:src="@drawable/jaxoologin" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/loginActivityTextInputLayoutEmail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:passwordToggleTint="@color/cardview_light_background"
+        android:textColorHint="#000">
 
         <EditText
             android:id="@+id/loginActivityEditTextEmail"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:backgroundTint="@android:color/white"
+            android:textColor="#000000"
+            android:background="#F6F6F6"
             android:hint="Email"
-            android:textColor="#000000" />
+
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -38,14 +42,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/cardview_light_background">
+        app:passwordToggleTint="@color/cardview_light_background"
+        android:textColorHint="#000">
 
         <EditText
             android:id="@+id/loginActivityEditTextPassword"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:backgroundTint="@android:color/white"
+            android:background="#F6F6F6"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="#000000" />
@@ -66,7 +71,8 @@
             android:layout_height="45dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/botonaleatorio"
-            android:text="Log in">
+            android:text="Log in"
+            android:textColor="#F8F8F8">
 
         </Button>
 
@@ -76,18 +82,19 @@
             android:layout_height="45dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/botonaleatorio"
-            android:text="Register">
+            android:text="Register"
+            android:textColor="#F8F8F8">
 
         </Button>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#FFFF"
             android:layout_marginTop="30dp"
             android:gravity="center"
-            android:textSize="15dp"
-            android:text="Accedé con tu usuario Google:"/>
+            android:text="Accedé con tu usuario Google:"
+            android:textColor="#FFFF"
+            android:textSize="15dp" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/loginActivityBotonGoogle"
