--- a/app/src/main/res/layout/activity_pop_up_letras.xml
+++ b/app/src/main/res/layout/activity_pop_up_letras.xml
@@ -7,7 +7,7 @@
     tools:context=".PopUpLetras"
     android:orientation="vertical"
     android:padding="15dp"
-    android:background="@drawable/layout_corner">
+    android:background="#6E1717">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
