--- a/app/src/main/res/layout/fragment_playlist_tracks.xml
+++ b/app/src/main/res/layout/fragment_playlist_tracks.xml
@@ -69,29 +69,15 @@
 
                     <ImageButton
                         android:id="@+id/playlistBotonFavoritos"
-                        android:layout_width="40dp"
+                        android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:background="#00FFFFFF"
                         android:src="@drawable/ic_favorite_border"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintLeft_toRightOf="@+id/botonAleatorioPlaylist"
-                        />
-
-                    <Button
-                        android:id="@+id/botonAleatorioPlaylist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="300dp"
-                        android:background="@drawable/botonaleatorio"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        android:padding="15dp"
-                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"/>
 
-                        android:text="Aleatoria">
 
-                    </Button>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -101,7 +87,7 @@
                 android:id="@+id/fragmentPlaylistRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp" />
+                 />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
